# cpp_projects

go_quant/go_quant/: a.out  auth_request
go_quant/go_quant/hpp/: ClientManager.hpp  MarketDataStreamer.hpp  OrderManager.hpp
go_quant/go_quant/src/: AuthManager.cpp  OrderManager.cpp  WebSocketServer.cpp  main.cpp
go_quant/go_quant/test/: test.cpp
go_quant/hpp/: AuthManager.hpp  Client.hpp  MessageHandler.hpp  SubscriptionManager.hpp  WebSocketClient.hpp  WebSocketServer.hpp
go_quant/src/: Client.cpp  ClientManager.cpp  MarketDataStreamer.cpp  MessageHandler.cpp  SubscriptionManager.cpp  WebSocketClient.cpp  main.cpp  websocket_app
go_quant/test/: Order.cpp  Order.hpp  OrderManager.cpp  auth_test.cpp  test.cpp  websocket.cpp  websocket_app
go_quant_new/: CMakeLists.txt  run.sh  test.cpp
go_quant_new/hpp/: ApiRequestManager.hpp  AuthManager.hpp  ClientSession.hpp  Logger.hpp  MarketDataFetcher.hpp  MessageHandler.hpp  OrderManager.hpp  SubscriptionManager.hpp  Utils.hpp  WebSocketServer.hpp  rest_server.hpp  websocket_client.hpp
go_quant_new/src/: ApiRequestManager.cpp  AuthManager.cpp  ClientSession.cpp  Logger.cpp  MarketDataFetcher.cpp  MessageHandler.cpp  OrderManager.cpp  SubscriptionManager.cpp  Utils.cpp  WebSocketServer.cpp  main.cpp  rest_server.cpp  websocket_client.cpp
web_server/: CMakeLists.txt  client  client.cpp
web_server/src/: main.cpp  server.cpp  server.hpp  thread_pool.cpp  thread_pool.hpp
